--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^8.2.12",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@capacitor/android": "^1.2.1",
+    "@capacitor/core": "1.2.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -39,6 +44,7 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
+    "@capacitor/cli": "1.2.1",
     "@ionic/angular-toolkit": "~2.0.0",
     "@ionic/app-scripts": "^3.2.4",
     "@types/jasmine": "~3.3.8",
