--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
+    "@angular/fire": "^5.2.3",
     "@angular/forms": "~8.1.2",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@capacitor/android": "^1.2.1",
+    "@capacitor/android": "^1.3.0",
     "@capacitor/core": "1.2.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -31,6 +32,7 @@
     "@ionic/angular": "^4.7.1",
     "@swimlane/ngx-datatable": "^16.0.2",
     "core-js": "^2.5.4",
+    "firebase": "^7.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
