--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@swimlane/ngx-datatable": "^16.0.2",
     "core-js": "^2.5.4",
     "firebase": "^7.3.0",
+    "mat-table-exporter": "^1.2.2",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
