--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
   "dependencies": {
     "@angular/animations": "^8.2.12",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/core": "~8.1.2",
+    "@angular/common": "~8.2.2",
+    "@angular/compiler": "~8.2.2",
+    "@angular/core": "~8.2.2",
     "@angular/fire": "^5.2.3",
-    "@angular/forms": "~8.1.2",
+    "@angular/forms": "~8.2.2",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.1.2",
-    "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
+    "@angular/platform-browser": "~8.2.2",
+    "@angular/platform-browser-dynamic": "~8.2.2",
+    "@angular/pwa": "^0.803.23",
+    "@angular/router": "~8.2.2",
+    "@angular/service-worker": "~8.2.2",
     "@capacitor/android": "^1.3.0",
     "@capacitor/core": "1.2.1",
     "@ionic-native/core": "^5.0.0",
@@ -40,13 +42,13 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.801.2",
-    "@angular-devkit/core": "~8.1.2",
-    "@angular-devkit/schematics": "~8.1.2",
-    "@angular/cli": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/compiler-cli": "~8.1.2",
-    "@angular/language-service": "~8.1.2",
+    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular-devkit/core": "~8.2.2",
+    "@angular-devkit/schematics": "~8.2.2",
+    "@angular/cli": "~8.2.2",
+    "@angular/compiler": "~8.2.2",
+    "@angular/compiler-cli": "~8.2.2",
+    "@angular/language-service": "~8.2.2",
     "@capacitor/cli": "1.2.1",
     "@ionic/angular-toolkit": "~2.0.0",
     "@ionic/app-scripts": "^3.2.4",
